desktop-window: restore transparency

And in same time port away from deprecated override_background_color
function.

https://bugzilla.gnome.org/show_bug.cgi?id=760790